--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
+/*===== GOOGLE FONTS =====*/
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-  
-html{
-    scroll-behavior: smooth;
-    
-}
+/*===== VARIABLES CSS =====*/
 
 :root {
     --header-height: 3rem;
@@ -39,6 +37,44 @@ html{
     --z-tooltip: 10;
     --z-fixed: 100;
 }
+
+@media screen and (min-width: 768px) {
+     :root {
+        --biggest-font-size: 4rem;
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --normal-font-size: 1rem;
+        --small-font-size: .875rem;
+        --smaller-font-size: .813rem;
+    }
+}
+
+
+/*========== BASE ==========*/
+
+*,
+::before,
+::after {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+
+/*========== Button Dark/Light ==========*/
+
+.change-theme {
+    position: absolute;
+    right: 1rem;
+    top: 1.8rem;
+    color: var(--text-color);
+    font-size: 1rem;
+    cursor: pointer;
+}
+
 body {
     margin: var(--header-height) 0 0 0;
     font-family: var(--body-font);
@@ -95,88 +131,428 @@ img {
     margin-bottom: var(--mb-1);
 }
 
-/* style  */
-.bd-container{
+
+/*========== LAYOUT ==========*/
+
+.bd-container {
     max-width: 960px;
-    width: 100%;
-    margin-left:var(--mb-2)
+    width: calc(100% - 2rem);
+    margin-left: var(--mb-2);
+    margin-right: var(--mb-2);
 }
 
-.l-header{
+.bd-grid {
+    display: grid;
+    gap: 1.5rem;
+}
+
+.l-header {
     width: 100%;
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
+    z-index: var(--z-fixed);
     background-color: var(--body-color);
 }
 
-/* nav style */
 
-.nav{
-    max-width: 1000px;
-    height:var(--header-height);
+/*========== NAV ==========*/
+
+.nav {
+    max-width: 1024px;
+    height: var(--header-height);
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
 }
-.nav-item{
+
+@media screen and (max-width: 768px) {
+    .nav__menu {
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        padding: 1.5rem 0 1rem;
+        text-align: center;
+        background-color: var(--body-color);
+        transition: .4s;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, .1);
+        border-radius: 0 0 1rem 1rem;
+        z-index: var(--z-fixed);
+    }
+}
+
+.nav__item {
     margin-bottom: var(--mb-2);
 }
 
-.nav-link, .nav-logo, .nav-toggle{
-    color:var(--text-color);
-   font-weight: var(--font-medium);
+.nav__link,
+.nav__logo,
+.nav__toggle {
+    color: var(--text-color);
+    font-weight: var(--font-medium);
 }
 
-.nav_menu{
-    
-    height:var(--header-height);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-.nav-logo{
+.nav__logo:hover {
     color: var(--first-color);
 }
 
-/* home-image-sytling */
-.home-container{
-
-height: 100vh;
-
-}
-.home-title{
-font-size: var(--biggest-font-size);
-color:var(--first-color);
-margin-bottom:var(--mb-1);
+.nav__link {
+    transition: .3s;
 }
 
-.home-subtitle{
-    font-size: var(--biggest-font-size);
-    color:var(--first-color);
-    margin-bottom:var(--mb-1);
-    }
-.home-image{
-width: 300px;
-justify-self: center;
-align-items: flex-end;
-
-}
-.home-data{
-display: flex;
-flex-direction: row;
-justify-content: space-between;
+.nav__link:hover {
+    color: var(--first-color);
 }
 
-.button{
-    background-color: var(--first-color);
-    border-radius:10px;
+.nav__toggle {
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+
+
+/* Show menu */
+
+.show-menu {
+    top: var(--header-height);
+}
+
+
+/* Change background header */
+
+.scroll-header {
+    box-shadow: 4px 2px 4px #048654;
+}
+
+
+/* Scroll top */
+
+.scrolltop {
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .3rem;
+    background: rgba(6, 156, 84, .5);
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: .4s;
+    visibility: hidden;
+}
+
+.scrolltop:hover {
+    background-color: var(--first-color-alt);
+}
+
+.scrolltop__icon {
+    font-size: 1.8rem;
     color: var(--body-color);
-    padding: var(--mb-2);
+}
+
+
+/* Show scrolltop */
+
+.show-scroll {
+    visibility: visible;
+    bottom: 1.5rem;
+}
+
+.active-link {
+    color: red;
+}
+
+
+/*========== HOME ==========*/
+
+.home__container {
+    height: calc(100vh - var(--header-height));
+    align-content: center;
+}
+
+.home__title {
+    font-size: var(--biggest-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+}
+
+.home__subtitle {
+    font-size: var(--h1-font-size);
+    color: var(--title-color);
+    margin-bottom: var(--mb-4);
+}
+
+.home__img {
+    width: 300px;
+    justify-self: center;
+}
+
+
+/*========== BUTTONS ==========*/
+
+.button {
+    display: inline-block;
+    background-color: var(--first-color);
+    color: #FFF;
+    padding: .75rem 1rem;
+    border-radius: .5rem;
+    transition: .3s;
+}
+
+.button:hover {
+    background-color: var(--first-color-alt);
+}
+
+
+/*========== ABOUT ==========*/
+
+.about__data {
+    text-align: center;
+}
+
+.about__description {
+    margin-bottom: var(--mb-3);
+}
+
+.about__img {
+    width: 280px;
+    border-radius: .5rem;
+    justify-self: center;
+}
+
+
+/*========== SERVICES ==========*/
+
+.services__container {
+    row-gap: 2.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.services__content {
+    text-align: center;
+}
+
+.services__img {
+    width: 64px;
+    height: 64px;
+    fill: var(--first-color);
+    margin-bottom: var(--mb-2);
+}
+
+.services__title {
+    font-size: var(--h3-font-size);
+    color: var(--title-color);
+    margin-bottom: var(--mb-1);
+}
+
+.services__description {
+    padding: 0 1.5rem;
+}
+
+
+/*========== MENU ==========*/
+
+.menu__container {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+}
+
+.menu__content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--container-color);
+    border-radius: .5rem;
+    box-shadow: 0 2px 4px rgba(3, 74, 40, .15);
+    padding: .75rem;
+}
+
+.menu__img {
+    width: 100px;
+    align-self: center;
+    margin-bottom: var(--mb-2);
+}
+
+.menu__name,
+.menu__preci {
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+}
+
+.menu__name {
     font-size: var(--normal-font-size);
+}
+
+.menu__detail,
+.menu__preci {
+    font-size: var(--small-font-size);
+}
+
+.menu__detail {
+    margin-bottom: var(--mb-1);
+}
+
+.menu__button {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    padding: .625rem .813rem;
+    border-radius: .5rem 0 .5rem 0;
+}
+
+
+/*========== CONTACT ==========*/
+
+.contact__container {
+    text-align: center;
+}
+
+.contact__description {
+    margin-bottom: var(--mb-3);
+}
+
+
+/*========== FOOTER ==========*/
+
+.footer__container {
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    row-gap: 2rem;
+}
+
+.footer__logo {
+    font-size: var(--h3-font-size);
+    color: var(--first-color);
+    font-weight: var(--font-semi-bold);
+}
+
+.footer__description {
+    display: block;
+    font-size: var(--small-font-size);
+    margin: .25rem 0 var(--mb-3);
+}
+
+.footer__social {
+    font-size: 1.5rem;
+    color: var(--title-color);
+    margin-right: var(--mb-2);
+}
+
+.footer__title {
+    font-size: var(--h2-font-size);
+    color: var(--title-color);
+    margin-bottom: var(--mb-2);
+}
+
+.footer__link {
+    display: inline-block;
+    color: var(--text-color);
+    margin-bottom: var(--mb-1);
+}
+
+.footer__link:hover {
+    color: var(--first-color);
+}
+
+.footer__copy {
+    text-align: center;
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
+    margin-top: 3.5rem;
+}
+
+
+/*========== MEDIA QUERIES ==========*/
+
+@media screen and (min-width: 576px) {
+    .home__container,
+    .about__container {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+    .about__data,
+    .about__initial,
+    .contact__container,
+    .contact__initial {
+        text-align: initial;
+    }
+    .about__img {
+        width: 380px;
+        order: -1;
+    }
+    .contact__container {
+        grid-template-columns: 1.75fr 1fr;
+        align-items: center;
+    }
+    .contact__button {
+        justify-self: center;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        margin: 0;
+    }
+    .section {
+        padding-top: 8rem;
+    }
+    .nav {
+        height: calc(var(--header-height) + 1.5rem);
+    }
+    .nav__list {
+        display: flex;
+    }
+    .nav__item {
+        margin-left: var(--mb-5);
+        margin-bottom: 0;
+    }
+    .nav__toggle {
+        display: none;
+    }
+    .change-theme {
+        position: initial;
+        margin-left: var(--mb-2);
+    }
+    .home__container {
+        height: 100vh;
+        justify-items: center;
+    }
+    .services__container,
+    .menu__container {
+        margin-top: var(--mb-6);
+    }
+    .menu__container {
+        grid-template-columns: repeat(3, 210px);
+        column-gap: 4rem;
+    }
+    .menu__content {
+        padding: 1.5rem;
+    }
+    .menu__img {
+        width: 130px;
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .bd-container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .home__img {
+        width: 500px;
+    }
+    .about__container,
+    .app__container {
+        column-gap: 7rem;
+    }
+}
+
+
+/* For tall screens on mobiles y desktop*/
+
+@media screen and (min-height: 721px) {
+    .home__container {
+        height: 640px;
+    }
 }
