--- a/style.css
+++ b/style.css
@@ -75,6 +75,13 @@ html {
     cursor: pointer;
 }
 
+body.dark-theme {
+    --title-color: #F1F3F2;
+    --text-color: #C7D1CC;
+    --body-color: #1D2521;
+    --container-color: #27302C;
+}
+
 body {
     margin: var(--header-height) 0 0 0;
     font-family: var(--body-font);
@@ -260,7 +267,7 @@ img {
 }
 
 .active-link {
-    color: red;
+    color: var(--first-color);
 }
 
 
@@ -298,6 +305,7 @@ img {
     padding: .75rem 1rem;
     border-radius: .5rem;
     transition: .3s;
+    cursor: pointer;
 }
 
 .button:hover {
@@ -464,34 +472,36 @@ img {
 
 
 /* ========form-styling========== */
-.form-section{
-    margin:var(--mb-5);
+
+.form-section {
+    margin: var(--mb-5);
     justify-content: center;
     padding: var(--mb-3);
-    background-color: var(--first-color);
+    background-color: var( --text-color);
     border-radius: var(--mb-3);
     position: relative;
     font-size: var(--mb-5);
-    width:400px;
+    width: 400px;
     margin-left: 25rem;
-    display:none;
+    display: none;
 }
 
-#submit{
-    font-size:var(--h2-font-size);
+#submit {
+    font-size: var(--h2-font-size);
     color: var(--first-color-alt);
     border-radius: var(--mb-3);
     box-shadow: #A6A6A6;
     /* width: var(--mb-2);
     height: var(--mb-3); */
     padding: var(--mb-2);
+}
 
+.bx-window-close {
+    margin-left: 100px;
+    color: #ff0000;
+    margin-top: 25px;
 }
-.bx-window-close{
-    margin-left:100px;
-    color:#ff0000;
-    margin-top:25px;
-}
+
 
 /*========== MEDIA QUERIES ==========*/
 
